force-app/main/default/objects/AR_PPD_Installment_Progression_Event__e/fields/Billed__c.field-meta.xml
<CustomField>
    <fullName>Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billed</label>
    <type>Checkbox</type>
</CustomField>