force-app/main/default/objects/AR_PPD_Installment_Progression_Event__e/fields/PaymentPlanDetailId__c.field-meta.xml
<CustomField>
    <fullName>PaymentPlanDetailId__c</fullName>
    <label>PaymentPlanDetailId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>