force-app/main/default/objects/AR_PPD_Installment_Progression_Event__e/fields/PhaseDate__c.field-meta.xml
<CustomField>
    <fullName>PhaseDate__c</fullName>
    <label>PhaseDate</label>
    <type>Date</type>
</CustomField>